--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
-        <span>A</span>
-        <span>L</span>
-        <span>L</span>
-        <span>O</span>
+        <span>B</span>
+        <span>D</span>
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!</span>
+        <span>smoga gaji tamba basar dan panjang umur amin</span>
     </div>
     <div class="button">
         <button>
