--- a/tailwind/index.html
+++ b/tailwind/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&family=Squada+One&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Shoes Spa</title>
 </head>
 <body>
   <div class="relative flex justify-center align">
